in installation section change python package manager to pip.

--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@ type="text/css" media="screen" />
     (<em>Git</em>, <em>Python & tools</em> and <em>CouchDB</em>), prefixed it with <em>sudo</em> if needed :
     </p>
     <pre>
- apt-get install python python-setuptools python-pycurl python-daemon python-imaging couchdb git </pre>
+ apt-get install python python-setuptools python-pip python-pycurl python-daemon python-imaging couchdb git </pre>
     <p>
         Via easy_install install <em>couchdbkit</em>, <em>markdown</em> and 
         <em>tornado</em> :
     </p>
     <pre>
- easy_install couchdbkit tornado markdown</pre>
+ pip install couchdbkit tornado markdown</pre>
     <p>
         <span class="step"> step 2 </span> Get <em>Newebe</em> from 
         <em>Github</em> or unpack the downloaded archive. In both case
