--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ type="text/css" media="screen" />
 
     <div class="feature feature-left">
       <h3>Share</h3>
-      <p>Share your thoughts, your links and your pictures.</p>
+      <p>Share your thoughts, your feelings, your links and your pictures.</p>
     </div>
 
     <div class="feature feature-right">
@@ -80,13 +80,13 @@ type="text/css" media="screen" />
     <div class="feature feature-left">
       <h3>Fast</h3>
       <p>Newebe does not need to handle millions of connections, 
-         he just serves you.
+         he just serves you and your contacts.
       </p>
     </div>
 
     <div class="feature feature-right">
       <h3>Free</h3>
-      <p>Newebe is a free software, you keep control on it.</p>  
+      <p>Newebe is a free software, you control the code and it behavior.</p>  
     </div>
 
     <div class="spacer"></div>
