--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ type="text/css" media="screen" />
 
     <div class="feature feature-right">
       <h3>Free</h3>
-      <p>Newebe is a free software, you control the code and it behavior.</p>  
+      <p>Newebe is a free software, you control the code and its behavior.</p>  
     </div>
 
     <div class="spacer"></div>
