add pictures for homepage

--- a/index.html
+++ b/index.html
@@ -68,16 +68,19 @@ type="text/css" media="screen" />
     <h2>Newebe is a distributed social network</h2>
 
     <div class="feature feature-left">
+      <img src="images/share.png" alt="Share picture" />
       <h3>Share</h3>
       <p>Share your thoughts, your feelings, your links and your pictures.</p>
     </div>
 
     <div class="feature feature-right">
+      <img src="images/owns.png" alt="Owns picture" />
       <h3>Owns</h3>
       <p>Each user hosts his Newebe instance, you keep your data at home.</p>
     </div>
 
     <div class="feature feature-left">
+      <img src="images/fast.png" alt="Fast picture" />
       <h3>Fast</h3>
       <p>Newebe does not need to handle millions of connections, 
          he just serves you and your contacts.
@@ -85,6 +88,7 @@ type="text/css" media="screen" />
     </div>
 
     <div class="feature feature-right">
+      <img src="images/free.png" alt="Free picture" />
       <h3>Free</h3>
       <p>Newebe is a free software, you control the code and its behavior.</p>  
     </div>
