add a blog link to my personal blog.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
             documentation</a></li>
         <li><a id="menu-contact" href="#contact">contact</a></li>
         <li><a id="menu-developers" href="#developers">developers</a></li>
+        <li>
+          <a id="menu-blog" 
+             target="blank"
+             href="https://gelnior.wordpress.com/category/serveurs-decentralises/">
+            Blog
+          </a>
+        </li>
     </ul>
 
     <div id="home">
