Remove uppercase from blog menu entry

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <a id="menu-blog" 
              target="blank"
              href="https://gelnior.wordpress.com/category/serveurs-decentralises/">
-            Blog
+            blog
           </a>
         </li>
     </ul>
