--- a/index.html
+++ b/index.html
@@ -122,6 +122,17 @@
 
     <div id="installation">
     <h2>Installation</h2>
+
+    <h3>Easy way for Debian or Ubuntu users</h3>
+    <p> 
+      To install Newebe just run the following commands in the folder where
+      you want to install Newebe. If you want to do a specific setup, refer
+      to the procedure described below.
+    </p>
+    <pre>
+    wget https://raw.github.com/gelnior/newebe/master/deploy/install_deb.sh
+    sh install_deb.sh</pre>
+
     <h3>Dependencies</h3>
     <ul>
         <li>Python &gt; 2.6</li>
