--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
 
     <div id="home">
 
+
+    <div id="annoucement">
+        <h2>Annoucement</h2>
+    <p>
+      Want to contribute to an innovative open source project which
+      uses cool technologies and pretends to make the web a better place ? 
+      Good News ! We are looking for developers, from beginner to expert
+      (Python and Coffeescript). If you are interested in helping building
+      this project contact us via 
+      <a href="http://groups.google.com/group/newebe">
+          our mailing list
+      </a>
+    </p>
+    </div>
+
     <h2>Newebe is a distributed social network</h2>
 
     <div class="feature feature-left">
