--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
     <div id="annoucement">
-        <h2>Annoucement</h2>
+        <h2>Announcement</h2>
     <p>
       Want to contribute to an innovative open source project which
       uses cool technologies and pretends to make the web a better place ? 
