--- a/index.html
+++ b/index.html
@@ -73,11 +73,15 @@
     <div id="home">
 
 
-    <div id="annoucement">
+    <div id="announcement">
         <h2>Announcement</h2>
+    <p id="annoucement-question">
+      <em>
+        Want to contribute to an innovative open source project which
+        uses cool technologies and pretends to make the web a better place ? 
+      </em>
+    </p>
     <p>
-      Want to contribute to an innovative open source project which
-      uses cool technologies and pretends to make the web a better place ? 
       Good News ! We are looking for developers, from beginner to expert
       (Python and Coffeescript). If you are interested in helping building
       this project contact us via 
