add instructions about themes

--- a/index.html
+++ b/index.html
@@ -137,7 +137,13 @@
     <h3>activity stream</h3>
     <img src="images/newebe_screen_04.jpg" 
          alt="Newebe screenshot - activity stream"/>
+    <h3>themes</h3>
+    <img src="images/newebe_theme_01.jpg" width="700" 
+         alt="Newebe screenshot - theme 01"/>
+    <img src="images/newebe_theme_02.jpg" width="700"
+         alt="Newebe screenshot - theme 02"/>
     </div>
+
 
     <div id="installation">
     <h2>Installation</h2>
@@ -322,6 +328,16 @@
     Tutorials are displayed when you first use newebe to help you
     understand the way it works. You just have to start using it, newebe will
     tell you what to do.
+    </p>
+    <h3>Themes</h3>
+    <p>
+    Themes can be added by providing a CSS file to Newebe. For that simply put
+    a file named <em>theme.css</em> in the directory <em>static/css/</em>.
+    </p>
+    <p>
+    You can download blue and green theme here :<br />
+    <a href="/themes/theme_01.css">blue theme</a><br />
+    <a href="/themes/theme_02.css">green theme</a>
     </p>
     <h3>More</h3>
     <p> For more informations about Newebe you can check the 
