add no check certificate to wget command (install)

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       to the procedure described below.
     </p>
     <pre>
- wget https://raw.github.com/gelnior/newebe/master/deploy/install_deb.sh
+ wget https://raw.github.com/gelnior/newebe/master/deploy/install_deb.sh --no-check-certificate
  sh install_deb.sh</pre>
 
     <h3>Dependencies</h3>
