change download link to 0.5.0

--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
         sharing and collaborative work. Unfortunately, to enjoy these new tools,
         we have traded our privacy. Newebe aims to solve this problem
         by providing web applications you host at your home and that connect
-        to your contacts.
+        directly to your contacts.
       </div>
       <div id="download-text">
         Download 
-        <a href="https://github.com/downloads/gelnior/newebe/newebe-0.4.0.zip">
-            newebe 0.4.0
+        <a href="https://github.com/downloads/gelnior/newebe/newebe-0.5.0.zip">
+            newebe 0.5.0
         </a>
       </div>
-      <p id="disclaimer">warning: newebe is not production ready.</p>
     </div>
 
     <div class="spacer"></div>
@@ -73,7 +72,7 @@
     <div id="home">
 
 
-    <div id="announcement">
+    <!--div id="announcement">
         <h2>Announcement</h2>
     <p id="annoucement-question">
       <em>
@@ -89,7 +88,7 @@
           our mailing list
       </a>
     </p>
-    </div>
+    </div-->
 
     <h2>Newebe is a distributed social network</h2>
 
