update home page descriptions

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             newebe 0.5.0
         </a>
       </div>
+      <div>&nbsp;</div>
     </div>
 
     <div class="spacer"></div>
@@ -95,13 +96,15 @@
     <div class="feature feature-left">
       <img src="images/share.png" alt="Share picture" />
       <h3>Share</h3>
-      <p>Share your thoughts, your feelings, your links and your pictures.</p>
+      <p>Share your thoughts, your feelings, your links and your pictures
+      with your contacts.</p>
     </div>
 
     <div class="feature feature-right">
       <img src="images/owns.png" alt="Owns picture" />
       <h3>Owns</h3>
-      <p>Each user hosts his Newebe instance, you keep your data at home.</p>
+      <p>Each user hosts his Newebe instance, you keep your data safely in 
+      an enviromnent you own.</p>
     </div>
 
     <div class="feature feature-left">
