--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
         Growth of web applications has been a huge improvement for social 
         sharing and collaborative work. Unfortunately, to enjoy these new tools,
         we have traded our privacy. Newebe aims to solve this problem
-        by providing web applications you host at your home and that connect
+        by providing social applications you host at your home and that connect
         directly to your contacts.
       </div>
       <div id="download-text">
-        Download 
-        <a href="https://github.com/downloads/gelnior/newebe/newebe-0.5.0.zip">
+        install
+        <a href="#install">
             newebe 0.5.0
         </a>
+        <span>beta</span>
       </div>
       <div>&nbsp;</div>
     </div>
@@ -56,16 +57,30 @@
 
     <ul id="menu">
         <li><a id="menu-home" href="#home">home</></li>
-        <li><a id="menu-installation" href="#installation">installation</a></li>
+        <li><a id="menu-installation" href="#install">install</a></li>
         <li><a id="menu-documentation" href="#documentation">
-            documentation</a></li>
+            doc</a></li>
         <li><a id="menu-contact" href="#contact">contact</a></li>
-        <li><a id="menu-developers" href="#developers">developers</a></li>
+        <li><a id="menu-developers" href="#developers">dev</a></li>
         <li>
           <a id="menu-blog" 
              target="blank"
              href="https://gelnior.wordpress.com/category/self-hosting/">
             blog
+          </a>
+        </li>
+        <li>
+          <a id="menu-wiki" 
+             target="blank"
+             href="https://github.com/gelnior/newebe/wiki">
+            wiki
+          </a>
+        </li>
+        <li>
+          <a id="menu-demo" 
+             target="blank"
+             href="https://91.121.12.75:17000/">
+            demo
           </a>
         </li>
     </ul>
