--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <li>
           <a id="menu-demo" 
              target="blank"
-             href="https://91.121.12.75:17000/">
+             href="http://demo.newebe.org/">
             demo
           </a>
         </li>
