change issues in dev section

--- a/index.html
+++ b/index.html
@@ -421,13 +421,12 @@
     <h3>Issues</h3>
     <p>Here are the main issues to solve :</p>
     <ul>
-        <li>Unit testing</li>
+        <li>Packaging</li>
+        <li>Indexation</li>
         <li>Security</li>
-        <li>Synchronisation</li>
-        <li>Document attachment</li>
-        <li>Back-up</li>
         <li>Internationalization</li>
-        <li>Application manager</li>
+        <li>File sharing</li>
+        <li>Indexation</li>
     </ul>
     <p>For more details about a subject, send an email to the mailing
     list and I will answer as soon as I can.
