--- a/index.html
+++ b/index.html
@@ -265,11 +265,19 @@ user=newebe</pre>
     <span class="step"> step 8 </span> Start newebe
     <pre>
 sudo supervisorctl update
+    </pre>
     <p>
         <span class="step"> step 8</span> Check that everything is fine via 
         your web browser : go to the URL
         <em>https://ip:port/</em> 
     </p>
+    <p>
+        In case of your newebe is not started, try the following:
+    </p>
+    <pre>
+sudo pip install importlib
+sudo supervisorctl start newebe
+    </pre>
     </div>
 
     <div id="faq">
