improve udpate section

--- a/index.html
+++ b/index.html
@@ -184,9 +184,11 @@ fab setup -H myrootuser@myhosturlorip
 
     <h3>Update</h3>
     <p>
-sudo pip install git+git://github.com/gelnior/newebe.git
-sudo supervisorctl restart newebe
+    On your remote server, simply type this lines:
     </p>
+    <pre>
+sudo pip install git+git://github.com/gelnior/newebe.git
+sudo supervisorctl restart newebe</pre>
     <h3>Manual way for Debian or Ubuntu user</h3>
     <p>
     <span class="step"> step 1 </span> Install following packages 
