make demo easier to access

--- a/index.html
+++ b/index.html
@@ -82,11 +82,7 @@
           </a>
         </li>
         <li>
-          <a id="menu-demo" 
-             target="blank"
-             href="http://demo.newebe.org/">
-            demo
-          </a>
+          <a id="menu-demo" href="#demo">demo</a>
         </li>
     </ul>
 
@@ -476,6 +472,16 @@ sudo supervisorctl start newebe
     </a>
     </div>
 
+<div id="demo">
+    <h2>Demo</h2>
+    <p>
+    You can have a look at Newebe by going to this URL: 
+    </p>
+    <a href="http//demo.newebe.org/">demo.newebe.org</a>
+    <p>
+    Sesame: newebe
+    </p>
+    </div>
 </body>
 <script src="newebe.js" type="text/javascript" ></script>
 </html>
